# -baseline

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/app/: __init__.py  config.py  main.py
tests/integration/: test_settings.py
tests/unit/: test_greet.py
